youfull/objects/CDW_Market_Report__c.object
<CustomObject>
    <fields>
        <fullName>AVAIL_CMPGN_CNT__c</fullName>
        <label>Number of Campaigns Available</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Branch</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>R+&lt;MRKT_ID&gt;+_+&lt;ACCT_NR&gt;+_BR_+&lt;CMPGN&gt;.xls</description>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>CDW Market Reports (Market2)</relationshipLabel>
        <relationshipName>CDW_Market_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>Select Profile</description>
        <label>Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Sales Leader - Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Code__c</fullName>
        <description>Report code, e.g. &apos;BR&apos; for the branch report</description>
        <inlineHelpText>Report code, e.g. &apos;BR&apos; for the branch report</inlineHelpText>
        <label>Report Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type_Index__c</fullName>
        <description>E.g. &apos;R&apos; for representative</description>
        <inlineHelpText>E.g. &apos;R&apos; for representative</inlineHelpText>
        <label>User Type Index</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>CDW Market Report</label>
    <listViews>
        <fullName>AR_DM_Report_Center</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Report_Code__c</columns>
        <columns>User_Type_Index__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <filters>
            <field>User_Type_Index__c</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>AR DM Report Center</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AR_ZM_Report_Center</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Report_Code__c</columns>
        <columns>User_Type_Index__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <filters>
            <field>User_Type_Index__c</field>
            <operation>equals</operation>
            <value>Z</value>
        </filters>
        <label>AR ZM Report Center</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Profile__c</columns>
        <columns>Report_Code__c</columns>
        <columns>User_Type_Index__c</columns>
        <columns>FileName__c</columns>
        <columns>AVAIL_CMPGN_CNT__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MEXICO_CDWReports</fullName>
        <columns>NAME</columns>
        <columns>FileName__c</columns>
        <columns>Market__c</columns>
        <columns>AVAIL_CMPGN_CNT__c</columns>
        <columns>Profile__c</columns>
        <columns>Report_Code__c</columns>
        <columns>User_Type_Index__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Mexico</value>
        </filters>
        <label>MEXICO_CDWReports</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>UK</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Profile__c</columns>
        <columns>Report_Code__c</columns>
        <columns>User_Type_Index__c</columns>
        <columns>FileName__c</columns>
        <columns>AVAIL_CMPGN_CNT__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <label>UK</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CDW Market Reports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDW Market Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>